InterceptorType for project filter